fix: :ambulance: game name set to "Insect Overflow"; minor fixes
fixed updateScore; removed auto triggering of bug/feature

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -41,3 +41,8 @@ kbd {
     color: #333333 !important;
     background-color: #eeeeee !important;
 }
+
+.poison {
+    color: #8c51c6;
+    font-weight: bold;
+}
